{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 119,
  "lineage": "ac080890-77ca-07d1-6273-a228ad562dc3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_alloc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.165.48.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-07-02T15:24:55.865-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/gruppo-9-456912/global/addresses/google-managed-services-private-ip-range",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "google-managed-services-private-ip-range",
            "network": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/networks/security-sim-vpc",
            "prefix_length": 20,
            "project": "gruppo-9-456912",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/addresses/google-managed-services-private-ip-range",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.service_networking",
            "module.vpc.google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.client_compute_instance[\"internal-client-1\"]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250610",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/zones/europe-west1-b/disks/internal-client-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-07-03T07:59:54.890-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/gruppo-9-456912/zones/europe-west1-b/instances/internal-client-01",
            "instance_id": "2023892282042426373",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata": {
              "DB_SERVER_IP_METADATA": "10.165.48.3",
              "DNS_SERVER_IP_METADATA": "10.0.1.2",
              "GCS_SCRIPTS_BUCKET_NAME_METADATA": "gruppo-9-456912-gcs-bucket",
              "WEB_SERVER_IP_METADATA": "10.0.1.4"
            },
            "metadata_fingerprint": "IXUNUWbeIfQ=",
            "metadata_startup_script": "#!/bin/bash\nsudo apt-get update \u0026\u0026 sudo apt-get install -y python3 python3-pip \u0026\u0026 pip3 install requests dnspython psycopg2-binary",
            "name": "internal-client-01",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/networks/security-sim-vpc",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/regions/europe-west1/subnetworks/internal-subnet",
                "subnetwork_project": "gruppo-9-456912"
              }
            ],
            "project": "gruppo-9-456912",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/zones/europe-west1-b/instances/internal-client-01",
            "service_account": [
              {
                "email": "client-vm-sa@gruppo-9-456912.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "internal-client"
            ],
            "tags_fingerprint": "gPas_RnxFaU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_service_account.client_vm_sa",
            "module.cloud_sql.google_sql_database_instance.main_instance",
            "module.cloud_storage.google_storage_bucket.main_bucket",
            "module.server_compute_instance.google_compute_instance.vm",
            "module.vpc.google_compute_network.main_vpc",
            "module.vpc.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https_from_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-03T07:58:40.726-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gruppo-9-456912/global/firewalls/security-sim-vpc-allow-http-https-internet",
            "log_config": [],
            "name": "security-sim-vpc-allow-http-https-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/networks/security-sim-vpc",
            "priority": 1000,
            "project": "gruppo-9-456912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/firewalls/security-sim-vpc-allow-http-https-internet",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_clients_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306",
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-03T07:58:40.718-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gruppo-9-456912/global/firewalls/security-sim-vpc-allow-internal-clients-to-db",
            "log_config": [],
            "name": "security-sim-vpc-allow-internal-clients-to-db",
            "network": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/networks/security-sim-vpc",
            "priority": 1000,
            "project": "gruppo-9-456912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/firewalls/security-sim-vpc-allow-internal-clients-to-db",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "internal-client"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "db-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-07-03T07:59:22.553-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gruppo-9-456912/global/firewalls/security-sim-vpc-allow-internal-traffic",
            "log_config": [],
            "name": "security-sim-vpc-allow-internal-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/networks/security-sim-vpc",
            "priority": 1000,
            "project": "gruppo-9-456912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/firewalls/security-sim-vpc-allow-internal-traffic",
            "source_ranges": [
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main_vpc",
            "module.vpc.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_from_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-03T07:58:40.723-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gruppo-9-456912/global/firewalls/security-sim-vpc-allow-ssh-internet",
            "log_config": [],
            "name": "security-sim-vpc-allow-ssh-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/networks/security-sim-vpc",
            "priority": 1000,
            "project": "gruppo-9-456912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/firewalls/security-sim-vpc-allow-ssh-internet",
            "source_ranges": [
              "10.0.0.0/24",
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "attacker-node",
              "dmz-instance"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.server_compute_instance[\"attacker-node\"]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250610",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/zones/europe-west1-b/disks/attacker-node-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-07-03T07:59:24.967-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/gruppo-9-456912/zones/europe-west1-b/instances/attacker-node-01",
            "instance_id": "1437676005447377955",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "Uy2uPBs6UBA=",
            "metadata_startup_script": "#!/bin/bash\nsudo apt-get update \u0026\u0026 sudo apt-get install -y nmap hydra python3 python3-pip \u0026\u0026 pip3 install python-nmap paramiko",
            "name": "attacker-node-01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.34.171.107",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/networks/security-sim-vpc",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/regions/europe-west1/subnetworks/dmz-subnet",
                "subnetwork_project": "gruppo-9-456912"
              }
            ],
            "project": "gruppo-9-456912",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/zones/europe-west1-b/instances/attacker-node-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "attacker-node"
            ],
            "tags_fingerprint": "Ouu1sUUh5xw=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main_vpc",
            "module.vpc.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.server_compute_instance[\"db-server\"]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250610",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/zones/europe-west1-b/disks/db-server-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-07-03T07:59:24.425-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/gruppo-9-456912/zones/europe-west1-b/instances/db-server-01",
            "instance_id": "484497718787122211",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "IxD4im-lFJo=",
            "metadata_startup_script": "#!/bin/bash\nsudo apt-get update \u0026\u0026 sudo apt-get install -y mariadb-server \u0026\u0026 sudo systemctl start mariadb \u0026\u0026 sudo systemctl enable mariadb",
            "name": "db-server-01",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/networks/security-sim-vpc",
                "network_ip": "10.0.3.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/regions/europe-west1/subnetworks/db-subnet",
                "subnetwork_project": "gruppo-9-456912"
              }
            ],
            "project": "gruppo-9-456912",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/zones/europe-west1-b/instances/db-server-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "db-server",
              "internal-instance"
            ],
            "tags_fingerprint": "7FeyzlCJyII=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main_vpc",
            "module.vpc.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.server_compute_instance[\"dns-server\"]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250610",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/zones/europe-west1-b/disks/dns-server-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-07-03T07:59:24.630-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/gruppo-9-456912/zones/europe-west1-b/instances/dns-server-01",
            "instance_id": "2543788628590142499",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "bHwoz8DMqxA=",
            "metadata_startup_script": "#!/bin/bash\nsudo apt-get update \u0026\u0026 sudo apt-get install -y bind9 bind9utils bind9-doc \u0026\u0026 sudo systemctl start bind9 \u0026\u0026 sudo systemctl enable bind9",
            "name": "dns-server-01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.76.56.110",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/networks/security-sim-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/regions/europe-west1/subnetworks/dmz-subnet",
                "subnetwork_project": "gruppo-9-456912"
              }
            ],
            "project": "gruppo-9-456912",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/zones/europe-west1-b/instances/dns-server-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "dns-server"
            ],
            "tags_fingerprint": "u4j0VmStUC8=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main_vpc",
            "module.vpc.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.server_compute_instance[\"web-server\"]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250610",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/zones/europe-west1-b/disks/web-server-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-07-03T07:59:25.374-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/gruppo-9-456912/zones/europe-west1-b/instances/web-server-01",
            "instance_id": "7513098358799148066",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "yRq9DFJPpm8=",
            "metadata_startup_script": "#!/bin/bash\nsudo apt-get update \u0026\u0026 sudo apt-get install -y nginx \u0026\u0026 echo '\u003ch1\u003eSimulated Web Server\u003c/h1\u003e' | sudo tee /var/www/html/index.html \u0026\u0026 sudo systemctl start nginx",
            "name": "web-server-01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.240.103.86",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/networks/security-sim-vpc",
                "network_ip": "10.0.1.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/regions/europe-west1/subnetworks/dmz-subnet",
                "subnetwork_project": "gruppo-9-456912"
              }
            ],
            "project": "gruppo-9-456912",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/zones/europe-west1-b/instances/web-server-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "dmz-instance",
              "web-server"
            ],
            "tags_fingerprint": "kkJHxg1RRiU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main_vpc",
            "module.vpc.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gruppo-9-456912/global/networks/security-sim-vpc",
            "mtu": 0,
            "name": "security-sim-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "1595545607245198460",
            "numeric_id": "1595545607245198460",
            "project": "gruppo-9-456912",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/networks/security-sim-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "db-subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-03T07:58:40.810-07:00",
            "description": "Subnet per il database.",
            "enable_flow_logs": false,
            "gateway_address": "10.0.3.1",
            "id": "projects/gruppo-9-456912/regions/europe-west1/subnetworks/db-subnet",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "db-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/networks/security-sim-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gruppo-9-456912",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/regions/europe-west1/subnetworks/db-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6755253011507520591
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main_vpc"
          ]
        },
        {
          "index_key": "dmz-subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-03T07:58:40.894-07:00",
            "description": "Subnet per servizi esposti (Web, Attacker).",
            "enable_flow_logs": false,
            "gateway_address": "10.0.1.1",
            "id": "projects/gruppo-9-456912/regions/europe-west1/subnetworks/dmz-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "dmz-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/networks/security-sim-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gruppo-9-456912",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/regions/europe-west1/subnetworks/dmz-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 8284371019398587471
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main_vpc"
          ]
        },
        {
          "index_key": "internal-subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-03T07:58:40.816-07:00",
            "description": "Subnet per client interni e servizi applicativi.",
            "enable_flow_logs": false,
            "gateway_address": "10.0.2.1",
            "id": "projects/gruppo-9-456912/regions/europe-west1/subnetworks/internal-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "internal-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/global/networks/security-sim-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gruppo-9-456912",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gruppo-9-456912/regions/europe-west1/subnetworks/internal-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7207425970134525007
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main_vpc"
          ]
        }
      ]
    }
  ]
}